--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@
 
 POSTGRES_PRISMA_URL="postgres://default:HqISUbnx53yL@ep-throbbing-wood-06262378-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
 POSTGRES_URL_NON_POOLING="postgres://default:HqISUbnx53yL@ep-throbbing-wood-06262378.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="J0yk0zV1JeYw+JHaExL1oNPUyWko++DgPscac69D5+A="
