--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ POSTGRES_PRISMA_URL="postgres://default:HqISUbnx53yL@ep-throbbing-wood-06262378-
 POSTGRES_URL_NON_POOLING="postgres://default:HqISUbnx53yL@ep-throbbing-wood-06262378.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="J0yk0zV1JeYw+JHaExL1oNPUyWko++DgPscac69D5+A="
+GOOGLE_CLIENT_ID="523100344779-b5t5ic7mc13tbhdgu45i0tcnqihfb7lv.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
